[feat] Added select/deselect all buttons

--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -223,6 +223,22 @@ color: rgb(255, 255, 255);</string>
      </item>
     </layout>
    </widget>
+   <widget class="QPushButton" name="selectAllButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>660</y>
+      <width>81</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: white</string>
+    </property>
+    <property name="text">
+     <string>Selected All</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
