--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -39,7 +39,8 @@
      <bool>false</bool>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: lightblue;</string>
+     <string notr="true">background-color: rgb(17, 88, 13);
+color: white;</string>
     </property>
     <property name="text">
      <string>Queue Selected</string>
@@ -53,6 +54,52 @@
       <width>1241</width>
       <height>591</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QScrollArea QScrollBar:vertical {
+    background-color: black; /* orange track background */
+    width: 10px;
+    margin: 15px 0 15px 0;
+    border-radius: 7px;
+}
+
+QScrollArea QScrollBar::handle:vertical {
+    background-color: white; /* darker orange handle */
+    min-height: 30px;
+    border-radius: 7px;
+}
+
+QScrollArea QScrollBar::handle:vertical:hover {
+    background-color: white; /* lighter orange on hover */
+}
+
+QScrollArea QScrollBar::handle:vertical:pressed {
+    background-color: #FF7F00; /* pressed state */
+}
+
+QScrollArea QScrollBar::sub-line:vertical,
+QScrollArea QScrollBar::add-line:vertical {
+    background-color: #FFA500; /* scrollbar buttons background */
+    height: 15px;
+    border-radius: 7px;
+    border: none;
+}
+
+QScrollArea QScrollBar::sub-line:vertical:hover,
+QScrollArea QScrollBar::add-line:vertical:hover {
+    background-color: #FF8C00; /* hover state for buttons */
+}
+
+QScrollArea QScrollBar::up-arrow:vertical,
+QScrollArea QScrollBar::down-arrow:vertical {
+    background: none; /* hide arrows or customize if needed */
+}
+
+QScrollArea QScrollBar::add-page:vertical,
+QScrollArea QScrollBar::sub-page:vertical {
+    background: none;
+}
+</string>
     </property>
     <property name="widgetResizable">
      <bool>true</bool>
@@ -203,7 +250,7 @@ color: black;</string>
        </property>
        <property name="styleSheet">
         <string notr="true">font: 600 12pt &quot;URW Gothic&quot;;
-color: rgb(255, 255, 255);</string>
+color: #F14E13;</string>
        </property>
        <property name="text">
         <string>1337x (Unofficial) Torrent Frontend Beta</string>
@@ -238,6 +285,88 @@ color: rgb(255, 255, 255);</string>
     <property name="text">
      <string>Selected All</string>
     </property>
+   </widget>
+   <widget class="QComboBox" name="categoryButton">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>20</y>
+      <width>121</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QComboBox {
+background-color: white;
+color: black;
+}
+
+QComboBox QAbstractItemView {
+    background-color: white;
+    color: black; /* normal text color */
+}
+
+QComboBox QAbstractItemView::item {
+    background-color: white;
+    color: black;
+}
+
+QComboBox QAbstractItemView::item:hover {
+    background-color: #F14E13;
+    color: black; /* hovered text color */
+}
+
+QComboBox QAbstractItemView::item:selected {
+    background-color: #F14E13FF;
+    color: black;
+}
+</string>
+    </property>
+    <item>
+     <property name="text">
+      <string>TV</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Movies</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Games</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Music</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Apps</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Documentaries</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Anime</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>Other</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>XXX</string>
+     </property>
+    </item>
    </widget>
   </widget>
  </widget>
